<?xml version="1.0"?>
<package format="3">
  <name>pose_tf_broadcaster</name>
  <version>0.0.1</version>
  <description>Broadcasts TF transforms from Gazebo pose topics.</description>
  <maintainer email="dudfhr3349@gmail.com">youngrok</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
